# doom-style-fire-ipp

./: .gitignore  CMakeLists.txt  benchmarks.cpp  build-linux.sh  doomASCIIFire.cpp  doomASCIIFire.h  main.cpp
src/: doomASCIIFire.cpp  doomASCIIFire.h  inputUtils.h  keys.h  linux-keys.cpp  linux-keys.h  linux-virtual-keys.h  main.cpp  utils.h
